# un-orchestrator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README_COMPILE.md  README_OpenWRT_ARM.md
NFs/docker/: README.md
NFs/docker/elastic-router/ctrl_app/: Dockerfile  Dockerfile_new  Dockerfile_python2  Dockerfile_zmq  build_ctrl_app  build_ctrl_app_test  ryu_ddclient_old2.py  start.sh  start_new.sh  start_zmq.sh  test_ctrl_app  zmq_ryu_test_alarm_send.py
NFs/docker/elastic-router/ovs/: Dockerfile  start.sh
NFs/docker/firewall/: start.sh
NFs/docker/gre-nat/: start.sh
NFs/docker/nat/: Dockerfile  start.sh
NFs/kvm/odl_controller/: odlController.xml
db_initializer/: CMakeLists.txt  README.md  db_initializer.cc
name-resolver/: CMakeLists.txt  README.md
name-resolver/config/: example.xml  name_resolver_config_er_demo.xml
orchestrator/: 2_1  2_2  2_3  2_4  2_5  2_6  2_ctrl  2_ovs  2_ovs1  CMakeCache.txt  CMakeLists.txt  Makefile  README_COMPILE.md  README_NF-FG.md  README_debug.md  cmake_install.cmake  node-orchestrator  node_orchestrator.cc  users.db
orchestrator/compute_controller/: compute_controller.cc  compute_controller.h  nf_type.h  nfs_manager.h
orchestrator/compute_controller/plugins/docker/: docker.cc  docker.h  docker_constants.h
orchestrator/compute_controller/plugins/docker/scripts/: pullAndRunNF.sh  stopNF.sh
orchestrator/compute_controller/plugins/dpdk/: dpdk.cc  dpdk.h
orchestrator/compute_controller/plugins/dpdk/scripts/: pullAndRunNF.sh
orchestrator/compute_controller/plugins/internal/: internal.h
orchestrator/compute_controller/plugins/kvm-libvirt/: ivshmem_cmdline_generator.cc  ivshmem_cmdline_generator.h  libvirt.cc  libvirt.h
orchestrator/compute_controller/plugins/kvm-libvirt/cmdline_generator/: cmdline_generator.c
orchestrator/compute_controller/plugins/kvm-libvirt/scripts/: qemu_run.sh
orchestrator/compute_controller/plugins/native/: native.cc
orchestrator/config/: default-config.ini  orchestrator_config_er_demo.ini
orchestrator/monitoring_controller/: monitoring_controller.cc
orchestrator/network_controller/openflow_controller/: controller.cc  controller.h
orchestrator/network_controller/switch_manager/: addNFports_in.h  checkPhysicalPorts_in.h  createLSIin.h  switch_manager.h
orchestrator/network_controller/switch_manager/plugins/erfs/: manager.cc
orchestrator/network_controller/switch_manager/plugins/ovs-dpdk/: ovsdpdk_manager.cc
orchestrator/network_controller/switch_manager/plugins/ovs-ovsdb/: commands.cc  ovsdb_constants.h
orchestrator/network_controller/switch_manager/plugins/xdpd/: xdpd_manager.cc
orchestrator/node_resource_manager/database_manager/SQLite/: SQLiteManager.cc
orchestrator/node_resource_manager/graph/: match.cc  match.h  vlan_action.cc
orchestrator/node_resource_manager/graph/generic_actions/: generic_action.h  vlan_action.cc  vlan_action.h
orchestrator/node_resource_manager/graph/graph-parser/: address_validator.cc  address_validator.h  graph_parser.cc  match_parser.cc  match_parser.h
orchestrator/node_resource_manager/graph/high_level_graph/: high_level_graph.cc  high_level_graph_vnf.cc  high_level_match.cc  high_level_match.h  high_level_output_action.h
orchestrator/node_resource_manager/graph/low_level_graph/: graph.cc  low_level_match.cc  low_level_match.h  output_action.h  rule.cc
orchestrator/node_resource_manager/graph_manager/: graph_manager.cc  graph_manager.h  graph_translator.cc  lsi.cc  lsi.h  switchPortsAssociation.cc  switchPortsAssociation.h
orchestrator/node_resource_manager/pub_sub/: pub_sub.cc  pub_sub.h  pub_sub_constants.h
orchestrator/node_resource_manager/resource_manager/: resource_manager.cc
orchestrator/node_resource_manager/rest_server/: rest_server.cc  rest_server.h
orchestrator/node_resource_manager/security_manager/: security_manager.cc
orchestrator/node_resource_manager/virtualizer/: virtualizer.py
orchestrator/utils/: constants.h  logger.c  logger.h  sockutils.c  sockutils.h
use-cases/elastic_router/bootstrap/: Makefile  README.md  democtrl  docker-compose-new.yml  docker-compose-old.yml  docker-compose.yml  ofcheck
use-cases/elastic_router/bootstrap/grafana/: grafana.db
use-cases/elastic_router/bootstrap/old-scripts/: remove_all.sh  start_all_background.sh  start_all_interactive.sh  start_elastic_router.sh  start_replay.sh  status_all.sh  stop_all_background.sh
use-cases/elastic_router/cadvisor/: Dockerfile  Makefile  main.py  run.sh
use-cases/elastic_router/cadvisor/cadvproxy/: cadv_ddclient.py  cadv_monitor.py
use-cases/elastic_router/cadvisor/keys/: p-keys.json
use-cases/elastic_router/ddtcpreplay/: Makefile.in  README_DD.md  aclocal.m4  configure  configure.ac
use-cases/elastic_router/ddtcpreplay/docs/: Makefile.in
use-cases/elastic_router/ddtcpreplay/kernel/: Makefile.in
use-cases/elastic_router/ddtcpreplay/lib/: Makefile.in
use-cases/elastic_router/ddtcpreplay/libopts/: Makefile.in
use-cases/elastic_router/ddtcpreplay/scripts/: Makefile.in
use-cases/elastic_router/ddtcpreplay/src/: Makefile.am  Makefile.in  bridge.c  replay.c  send_packets.c  tcpbridge.1  tcpbridge.c  tcpbridge_opts.c  (+28 more)
use-cases/elastic_router/deployment_scripts/: README.md  Vagrantfile
use-cases/elastic_router/elastic_router_files/: orchestrator_config_er_demo.ini  scale_in  scale_out  start_ER  start_UN  start_traffic  start_veth
use-cases/elastic_router/name-resolver/: Makefile  Makefile_vagrant  README.md
use-cases/elastic_router/opentsdb/: Dockerfile  Makefile  ddproxy.py  docker-compose.yml  start_ddproxy.sh
use-cases/elastic_router/ramon/: -dna-  Dockerfile  Makefile  UNIFY-ER-aggregator  ramon_dd.sh  ratemon_client.py  start_ramons.sh
use-cases/elastic_router/traffic/: start_replay.sh  stop_replay.sh
use-cases/elastic_router/ts_deployment_scripts/: README.md  Vagrantfile  bootstrap.sh
utils/travis-ci/: build.sh  prepare.sh
virtualizer/: .graph.json  .universalnode.xml  Dockerfile  Makefile  constants.py  er_nffg_virtualizer5_v5.xml  virtualizer.py
virtualizer/config/: configuration.ini
(+65 files in other folders)
